<resources>
    <string name="app_name">Progressor</string>

    <string name="action_settings">Settings</string>

    <string name="setting_category_personalization">Personalization</string>
    <string name="setting_dark_mode">Dark mode</string>
    <string name="setting_dark_mode_summary">Toggle the app-wide dark theme.</string>
    <string name="setting_category_help">Help</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_summary">Report technical issues or suggest new features.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description_add_progress">Add progress</string>
</resources>
